@@ -1,8 +1,9 @@
 Begin4
 Title:		hdparm
-Version:	6.5
-Entered-date:	2005-10-18
+Version:	6.6
+Entered-date:	2006-03-07
 Description:	hdparm - get/set hard disk parameters for Linux IDE drives.
+		v6.6 fix build on Redhat/Fedora
 		v6.5 fix -I bugs introduced in v6.4
 		v6.4 major update for -I, bug fix for -C
 		v6.3 report ATA revisions > 7
@@ -50,8 +51,8 @@ Keywords:	ide eide ata atapi performance kernel cd cdrom disk device driver
 Author:		mlord@pobox.com (Mark Lord)
 Maintained-by:	mlord@pobox.com (Mark Lord)
 Primary-site:	http://sourceforge.net/projects/hdparm/
-Secondary-site:	http://www.ibiblio.org/pub/Linux/system/hardware
-		46K hdparm-6.5.tar.gz
+Alternate-site:	http://www.ibiblio.org/pub/Linux/system/hardware
+		46K hdparm-6.6.tar.gz
 		1K hdparm.lsm
 Platforms:	Linux, kernels 2.2 through 2.6
 Copying-policy:	BSD License
